@@ -1,4 +1,14 @@
 package com.mygdx.ui.buttons;
 
-public class Button {
+import com.badlogic.gdx.scenes.scene2d.Actor;
+import com.mygdx.gameworld.World;
+
+public class Button extends Actor {
+
+    World world;
+
+    public Button(World world){
+        this.world = world;
+        setBounds(0, 0, 16, 16);
+    }
 }
